Bug 1568109 - overflow-wrap mail notification in case of some very long words (e.g. some base64-encoded content). r=jorgk DONTBUILD

--- a/mail/themes/shared/mail/newmailalert.css
+++ b/mail/themes/shared/mail/newmailalert.css
@@ -78,6 +78,7 @@ folder-summary {
 
 .folderSummary-previewText {
   color: grey;
+  overflow-wrap: anywhere;
 }
 
 .folderSummaryMessage:hover > .folderSummary-message-row {
